--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html lang="sr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dinamične slike i pozadine</title>
+    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script> <!-- Socket.io biblioteka -->
+</head>
+<body>
+
+    <!-- Dugme za dodavanje slike -->
+    <button id="addImage">Dodaj Sliku</button>
+
+    <!-- Dugme za promenu pozadine -->
+    <button id="pozadina">Promeni Pozadinu</button>
+
+    <!-- Tu će biti prikazane slike -->
+    <div id="image-container"></div>
+
+    <script>
 let selectedImage = null; // Deklaracija promenljive koja drži trenutno selektovanu sliku
 
 document.getElementById('addImage').addEventListener('click', function () {
@@ -261,3 +281,9 @@ document.getElementById("pozadina").addEventListener("click", function() {
 socket.on("updateBackground", (url) => {
     document.body.style.backgroundImage = "url('" + url + "')";
 });
+
+            </script> <!-- Zatvaranje JavaScript dela -->
+
+</body> <!-- Zatvaranje BODY taga -->
+
+</html> <!-- Zatvaranje HTML taga -->
