--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinamične slike i pozadine</title>
-    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script> <!-- Socket.io biblioteka -->
+   
 </head>
 <body>
 
@@ -28,39 +28,55 @@ document.getElementById('addImage').addEventListener('click', function () {
         const dimensions = { width: 200, height: 200 }; // Primer dimenzija
 
         // Provera formata slike
-        const fileExtension = imageSource.split('.').pop().toLowerCase(); // Uzima ekstenziju fajla
-        const validFormats = ['jpg', 'png', 'gif'];
+      const fileExtension = imageSource.split('.').pop().toLowerCase(); // Uzima ekstenziju fajla
+const validFormats = ['jpg', 'png', 'gif'];
 
-        if (validFormats.includes(fileExtension)) {
-            // Emitujemo URL slike sa pozicijom i dimenzijama serveru pod imenom 'add-image'
-            socket.emit('add-image', imageSource, position, dimensions);
-        } else {
-            alert('Format slike nije podržan. Podržani formati su: JPG, PNG, GIF.');
-        }
-    } else {
-        alert('URL slike nije unet.');
+if (validFormats.includes(fileExtension)) {
+    // Ovdje dodaj kod za rad sa slikom (npr. prikazivanje slike na stranici)
+    addImageToDOM(imageSource, position, dimensions); // Primer funkcije za prikazivanje slike
+} else {
+    alert('Format slike nije podržan. Podržani formati su: JPG, PNG, GIF.');
+}
+} else {
+    alert('URL slike nije unet.');
+}
+
+
+// Umesto socket on događaja, koristiš direktnu manipulaciju DOM-om
+
+// Funkcija za dodavanje slike na DOM
+function addImageToDOM(imageUrl, position, dimensions) {
+    let existingImage = document.querySelector(`img[src="${imageUrl}"]`);
+    if (!existingImage) {
+        const newImage = document.createElement('img');
+        newImage.src = imageUrl;
+        newImage.style.width = dimensions.width + 'px';
+        newImage.style.height = dimensions.height + 'px';
+        newImage.style.position = "absolute";
+        newImage.style.left = position.x + 'px';
+        newImage.style.top = position.y + 'px';
+        newImage.style.zIndex = "1000";
+        newImage.classList.add('draggable', 'resizable');
+        document.body.appendChild(newImage); // Dodajemo sliku u body
     }
-});
+}
 
-// Osluškujemo 'display-image' događaj sa servera
-socket.on('display-image', (data) => {
-    addImageToDOM(data.imageUrl, data.position, data.dimensions);
-});
-
-// Osluškujemo 'initial-images' događaj sa servera i prikazujemo postojeće slike
-socket.on('initial-images', (images) => {
+// Funkcija za inicijalno dodavanje slika
+function addInitialImages(images) {
     images.forEach((imageData) => {
         addImageToDOM(imageData.imageUrl, imageData.position, imageData.dimensions);
     });
-});
+}
 
-// Osluškujemo 'update-images' događaj sa servera
-socket.on('update-images', (updatedImages) => {
-     document.querySelectorAll('img').forEach(slika => {
-    if (slika.id !== "playerCover") {
-        slika.remove(); // Briše samo slike koje nemaju ID "playerCover"
-    }
-});
+// Funkcija za ažuriranje slika
+function updateImages(updatedImages) {
+    document.querySelectorAll('img').forEach(img => img.remove()); // Briše sve slike
+
+    updatedImages.forEach((imageData) => {
+        addImageToDOM(imageData.imageUrl, imageData.position, imageData.dimensions);
+    });
+}
+
 
     // Zatim ponovo dodajemo sve slike iz nove liste
     updatedImages.forEach((imageData) => {
@@ -245,42 +261,32 @@ function emitImageUpdate(img) {
      updateImageOnServer(imageUrl, position, dimensions);
 }
 
-// Funkcija za slanje podataka o slici serveru
-function updateImageOnServer(imageUrl, position, dimensions) {
-     socket.emit('update-image', {
-        imageUrl: imageUrl,
-        position: position,
-        dimensions: dimensions
-    });
+// Funkcija za ažuriranje slike na stranici
+function updateImageOnPage(imageUrl, position, dimensions) {
+    const syncedImage = document.querySelector(`img[src="${imageUrl}"]`); // Selektujemo sliku po URL-u
+    if (syncedImage) {
+        syncedImage.style.left = position.x + 'px';
+        syncedImage.style.top = position.y + 'px';
+        syncedImage.style.width = dimensions.width + 'px';
+        syncedImage.style.height = dimensions.height + 'px';
+    }
 }
 
-// Funkcija za sinhronizaciju slike sa servera
-socket.on('sync-image', (data) => {
-    const syncedImage = document.querySelector(`img[src="${data.imageUrl}"]`); // Selektujemo sliku po URL-u
-    if (syncedImage) {
-        syncedImage.style.left = data.position.x + 'px';
-        syncedImage.style.top = data.position.y + 'px';
-        syncedImage.style.width = data.dimensions.width + 'px';
-        syncedImage.style.height = data.dimensions.height + 'px';
-        
-    }
-});
-// SLIKE ZA POZADINU 
+// Sinhronizacija slike bez servera (samo u DOM-u)
+function syncImage(imageUrl, position, dimensions) {
+    updateImageOnPage(imageUrl, position, dimensions);
+}
+
+// SLIKE ZA POZADINU
 document.getElementById("pozadina").addEventListener("click", function() {
     var url = prompt("Unesite URL slike:");
     if (url) {
         document.body.style.backgroundImage = "url('" + url + "')";
-        socket.emit("changeBackground", url); // Ovo šalje serveru
     } else {
         document.body.style.backgroundImage = "url('default_image_url.jpg')";
-        socket.emit("changeBackground", "default_image_url.jpg");
-
     }
 });
 
-socket.on("updateBackground", (url) => {
-    document.body.style.backgroundImage = "url('" + url + "')";
-});
 
             </script> <!-- Zatvaranje JavaScript dela -->
 
