--- a/index.html
+++ b/index.html
@@ -42,32 +42,6 @@ if (validFormats.includes(fileExtension)) {
 }
 
 
-// Umesto socket on događaja, koristiš direktnu manipulaciju DOM-om
-
-// Funkcija za dodavanje slike na DOM
-function addImageToDOM(imageUrl, position, dimensions) {
-    let existingImage = document.querySelector(`img[src="${imageUrl}"]`);
-    if (!existingImage) {
-        const newImage = document.createElement('img');
-        newImage.src = imageUrl;
-        newImage.style.width = dimensions.width + 'px';
-        newImage.style.height = dimensions.height + 'px';
-        newImage.style.position = "absolute";
-        newImage.style.left = position.x + 'px';
-        newImage.style.top = position.y + 'px';
-        newImage.style.zIndex = "1000";
-        newImage.classList.add('draggable', 'resizable');
-        document.body.appendChild(newImage); // Dodajemo sliku u body
-    }
-}
-
-// Funkcija za inicijalno dodavanje slika
-function addInitialImages(images) {
-    images.forEach((imageData) => {
-        addImageToDOM(imageData.imageUrl, imageData.position, imageData.dimensions);
-    });
-}
-
 // Funkcija za dodavanje slike na DOM
 function addImageToDOM(imageUrl, position, dimensions) {
     let existingImage = document.querySelector(`img[src="${imageUrl}"]`);
@@ -98,31 +72,44 @@ function addImageToDOM(imageUrl, position, dimensions) {
             selectImage(newImage);
         });
 
-        // Održavanje selekcije (indikator ostaje bez obzira na interakciju miša)
-        document.addEventListener('click', function (event) {
-            if (!event.target.classList.contains('draggable') && selectedImage) {
-                selectedImage.style.border = "2px solid red"; // Održavaj okvir
-            }
-        });
+        document.body.appendChild(newImage); // Dodajemo sliku u body
+    }
+}
 
-        // Dugme za brisanje slike
-        const deleteButton = document.createElement('button');
-        deleteButton.innerText = "Ukloni Sliku";
-        deleteButton.style.position = "fixed";
-        deleteButton.style.bottom = "10px";
-        deleteButton.style.right = "10px";
-        deleteButton.style.zIndex = "1001";
+// Funkcija za inicijalno dodavanje slika
+function addInitialImages(images) {
+    images.forEach((imageData) => {
+        addImageToDOM(imageData.imageUrl, imageData.position, imageData.dimensions);
+    });
+}
 
-       deleteButton.addEventListener('click', function () {
-    if (selectedImage) {
-        const imageUrl = selectedImage.src;
-        selectedImage.remove(); // Ukloni selektovanu sliku sa DOM-a
-        socket.emit('remove-image', imageUrl); // Emituj događaj za server sa URL-om slike
-        selectedImage = null; // Očisti selekciju
-    } else {
-        alert("Nijedna slika nije selektovana!");
+// Održavanje selekcije (indikator ostaje bez obzira na interakciju miša)
+document.addEventListener('click', function (event) {
+    // Ako kliknemo na element koji nije slika, a slika je selektovana, zadrži selekciju
+    if (!event.target.classList.contains('draggable') && selectedImage) {
+        selectedImage.style.border = "2px solid red"; // Održavaj okvir
     }
 });
+
+// Dugme za brisanje slike
+const deleteButton = document.createElement('button');
+deleteButton.innerText = "Ukloni Sliku";
+deleteButton.style.position = "fixed";
+deleteButton.style.bottom = "10px";
+deleteButton.style.right = "10px";
+deleteButton.style.zIndex = "1001";
+
+// Kada kliknemo na dugme za brisanje, ukloni selektovanu sliku
+deleteButton.addEventListener('click', function () {
+    if (selectedImage) {
+        selectedImage.remove(); // Ukloni selektovanu sliku sa DOM-a
+        selectedImage = null; // Očisti selekciju
+    } else {
+        alert("Nijedna slika nije selektovana!"); // Ako nije selektovana nijedna slika
+    }
+});
+
+document.body.appendChild(deleteButton); // Dodajemo dugme u body
 
 // Funkcija za omogućavanje drag-and-resize funkcionalnosti za sliku
 function enableDragAndResize(img) {
@@ -142,6 +129,7 @@ function enableDragAndResize(img) {
         img.style.border = "none";
     });
 
+    // Logika za resizing (ako želite da omogućite promenu veličine slike)
     img.addEventListener('mousedown', function (e) {
         const rect = img.getBoundingClientRect();
         const borderSize = 10;
@@ -190,9 +178,6 @@ function enableDragAndResize(img) {
                 resizeSide = null;
                 document.onmousemove = null;
                 document.onmouseup = null;
-
-                // Emitujemo promene na server
-                emitImageUpdate(img);
             };
         } else {
             dragMouseDown(e);
@@ -216,18 +201,19 @@ function enableDragAndResize(img) {
     function closeDragElement() {
         document.onmouseup = null;
         document.onmousemove = null;
-
-        // Emitujemo promene na server
-        emitImageUpdate(img);
     }
 }
 
+
+// Funkcija za emitovanje podataka o slici (pozicija i dimenzije)
 // Funkcija za emitovanje podataka o slici (pozicija i dimenzije)
 function emitImageUpdate(img) {
     const position = { x: img.offsetLeft, y: img.offsetTop }; // Pozicija slike
     const dimensions = { width: img.offsetWidth, height: img.offsetHeight }; // Dimenzije slike
     const imageUrl = img.src; // URL slike
-     updateImageOnServer(imageUrl, position, dimensions);
+
+    // Ako šaljemo na server, ovo bi bila funkcija za emitovanje, ali trenutno ne šaljemo podatke
+    syncImage(imageUrl, position, dimensions);
 }
 
 // Funkcija za ažuriranje slike na stranici
@@ -243,7 +229,7 @@ function updateImageOnPage(imageUrl, position, dimensions) {
 
 // Sinhronizacija slike bez servera (samo u DOM-u)
 function syncImage(imageUrl, position, dimensions) {
-    updateImageOnPage(imageUrl, position, dimensions);
+    updateImageOnPage(imageUrl, position, dimensions); // Pozivamo funkciju za ažuriranje slike
 }
 
 // SLIKE ZA POZADINU
@@ -255,6 +241,7 @@ document.getElementById("pozadina").addEventListener("click", function() {
         document.body.style.backgroundImage = "url('default_image_url.jpg')";
     }
 });
+
 
 
             </script> <!-- Zatvaranje JavaScript dela -->
