--- a/index.html
+++ b/index.html
@@ -4,248 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinamične slike i pozadine</title>
-   
+    <style>
+        body {
+            background-color: black; /* Crna pozadina */
+            color: white; /* Bela boja teksta */
+            font-family: Arial, sans-serif; /* Odabir fonta */
+        }
+
+        #pozadina {
+            padding: 10px 20px;
+            background-color: transparent;
+            border: 2px solid white;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1000;
+            box-shadow: 0 0 10px 2px white; /* Neon efekat */
+            transition: all 0.3s ease;
+        }
+
+        #pozadina:hover {
+            background-color: white;
+            color: black;
+            box-shadow: 0 0 15px 5px cyan; /* Neon hover efekat */
+        }
+    </style>
 </head>
 <body>
-
-    <!-- Dugme za dodavanje slike -->
-    <button id="addImage">Dodaj Sliku</button>
 
     <!-- Dugme za promenu pozadine -->
     <button id="pozadina">Promeni Pozadinu</button>
 
-    <!-- Tu će biti prikazane slike -->
-    <div id="image-container"></div>
-
     <script>
-let selectedImage = null; // Deklaracija promenljive koja drži trenutno selektovanu sliku
-
-document.getElementById('addImage').addEventListener('click', function () {
-    const imageSource = prompt("Unesite URL slike (JPG, PNG, GIF):");
-
-    if (imageSource) { // Ako je URL slike unet
-        const position = { x: 100, y: 300 }; // Primer pozicije
-        const dimensions = { width: 200, height: 200 }; // Primer dimenzija
-
-        // Provera formata slike
-      const fileExtension = imageSource.split('.').pop().toLowerCase(); // Uzima ekstenziju fajla
-const validFormats = ['jpg', 'png', 'gif'];
-
-if (validFormats.includes(fileExtension)) {
-    // Ovdje dodaj kod za rad sa slikom (npr. prikazivanje slike na stranici)
-    addImageToDOM(imageSource, position, dimensions); // Primer funkcije za prikazivanje slike
-} else {
-    alert('Format slike nije podržan. Podržani formati su: JPG, PNG, GIF.');
-}
-} else {
-    alert('URL slike nije unet.');
-}
-
-
-// Funkcija za dodavanje slike na DOM
-function addImageToDOM(imageUrl, position, dimensions) {
-    let existingImage = document.querySelector(`img[src="${imageUrl}"]`);
-    if (!existingImage) {
-        const newImage = document.createElement('img');
-        newImage.src = imageUrl;
-        newImage.style.width = dimensions.width + 'px';
-        newImage.style.height = dimensions.height + 'px';
-        newImage.style.position = "absolute";
-        newImage.style.left = position.x + 'px';
-        newImage.style.top = position.y + 'px';
-        newImage.style.zIndex = "1000";
-        newImage.classList.add('draggable', 'resizable');
-        newImage.style.border = "none";
-
-        // Selektovanje slike
-        function selectImage(image) {
-            if (selectedImage && selectedImage !== image) {
-                selectedImage.style.border = "none"; // Ukloni indikator sa prethodne selekcije
+        // SLIKE ZA POZADINU
+        document.getElementById("pozadina").addEventListener("click", function() {
+            var url = prompt("Unesite URL slike:");
+            if (url) {
+                document.body.style.backgroundImage = "url('" + url + "')";
+            } else {
+                document.body.style.backgroundImage = "url('default_image_url.jpg')";
             }
-            selectedImage = image;
-            selectedImage.style.border = "2px solid red"; // Dodaj indikator selekcije
-        }
-
-        // Desni klik za selekciju slike
-        newImage.addEventListener('contextmenu', function (event) {
-            event.preventDefault();
-            selectImage(newImage);
         });
-
-        document.body.appendChild(newImage); // Dodajemo sliku u body
-    }
-}
-
-// Funkcija za inicijalno dodavanje slika
-function addInitialImages(images) {
-    images.forEach((imageData) => {
-        addImageToDOM(imageData.imageUrl, imageData.position, imageData.dimensions);
-    });
-}
-
-// Održavanje selekcije (indikator ostaje bez obzira na interakciju miša)
-document.addEventListener('click', function (event) {
-    // Ako kliknemo na element koji nije slika, a slika je selektovana, zadrži selekciju
-    if (!event.target.classList.contains('draggable') && selectedImage) {
-        selectedImage.style.border = "2px solid red"; // Održavaj okvir
-    }
-});
-
-// Dugme za brisanje slike
-const deleteButton = document.createElement('button');
-deleteButton.innerText = "Ukloni Sliku";
-deleteButton.style.position = "fixed";
-deleteButton.style.bottom = "10px";
-deleteButton.style.right = "10px";
-deleteButton.style.zIndex = "1001";
-
-// Kada kliknemo na dugme za brisanje, ukloni selektovanu sliku
-deleteButton.addEventListener('click', function () {
-    if (selectedImage) {
-        selectedImage.remove(); // Ukloni selektovanu sliku sa DOM-a
-        selectedImage = null; // Očisti selekciju
-    } else {
-        alert("Nijedna slika nije selektovana!"); // Ako nije selektovana nijedna slika
-    }
-});
-
-document.body.appendChild(deleteButton); // Dodajemo dugme u body
-
-// Funkcija za omogućavanje drag-and-resize funkcionalnosti za sliku
-function enableDragAndResize(img) {
-    let isResizing = false;
-    let resizeSide = null;
-
-    // Onemogućava promenu kursora prilikom pomeranja slike
-    img.style.cursor = 'default';
-
-    // Dodavanje border-a kada korisnik pređe mišem preko slike
-    img.addEventListener('mouseenter', function () {
-        img.style.border = "2px dashed red";
-    });
-
-    // Uklanjanje border-a kada korisnik skloni miša sa slike
-    img.addEventListener('mouseleave', function () {
-        img.style.border = "none";
-    });
-
-    // Logika za resizing (ako želite da omogućite promenu veličine slike)
-    img.addEventListener('mousedown', function (e) {
-        const rect = img.getBoundingClientRect();
-        const borderSize = 10;
-
-        if (e.clientX >= rect.left && e.clientX <= rect.left + borderSize) {
-            resizeSide = 'left';
-        } else if (e.clientX >= rect.right - borderSize && e.clientX <= rect.right) {
-            resizeSide = 'right';
-        } else if (e.clientY >= rect.top && e.clientY <= rect.top + borderSize) {
-            resizeSide = 'top';
-        } else if (e.clientY >= rect.bottom - borderSize && e.clientY <= rect.bottom) {
-            resizeSide = 'bottom';
-        }
-
-        if (resizeSide) {
-            isResizing = true;
-            const initialWidth = img.offsetWidth;
-            const initialHeight = img.offsetHeight;
-            const startX = e.clientX;
-            const startY = e.clientY;
-
-            document.onmousemove = function (e) {
-                if (isResizing) {
-                    if (resizeSide === 'right') {
-                        img.style.width = initialWidth + (e.clientX - startX) + 'px';
-                    } else if (resizeSide === 'bottom') {
-                        img.style.height = initialHeight + (e.clientY - startY) + 'px';
-                    } else if (resizeSide === 'left') {
-                        const newWidth = initialWidth - (e.clientX - startX);
-                        if (newWidth > 10) {
-                            img.style.width = newWidth + 'px';
-                            img.style.left = rect.left + (e.clientX - startX) + 'px';
-                        }
-                    } else if (resizeSide === 'top') {
-                        const newHeight = initialHeight - (e.clientY - startY);
-                        if (newHeight > 10) {
-                            img.style.height = newHeight + 'px';
-                            img.style.top = rect.top + (e.clientY - startY) + 'px';
-                        }
-                    }
-                }
-            };
-
-            document.onmouseup = function () {
-                isResizing = false;
-                resizeSide = null;
-                document.onmousemove = null;
-                document.onmouseup = null;
-            };
-        } else {
-            dragMouseDown(e);
-        }
-    });
-
-    function dragMouseDown(e) {
-        e.preventDefault();
-        let pos3 = e.clientX;
-        let pos4 = e.clientY;
-
-        document.onmouseup = closeDragElement;
-        document.onmousemove = function (e) {
-            img.style.top = (img.offsetTop - (pos4 - e.clientY)) + 'px';
-            img.style.left = (img.offsetLeft - (pos3 - e.clientX)) + 'px';
-            pos3 = e.clientX;
-            pos4 = e.clientY;
-        };
-    }
-
-    function closeDragElement() {
-        document.onmouseup = null;
-        document.onmousemove = null;
-    }
-}
-
-
-// Funkcija za emitovanje podataka o slici (pozicija i dimenzije)
-// Funkcija za emitovanje podataka o slici (pozicija i dimenzije)
-function emitImageUpdate(img) {
-    const position = { x: img.offsetLeft, y: img.offsetTop }; // Pozicija slike
-    const dimensions = { width: img.offsetWidth, height: img.offsetHeight }; // Dimenzije slike
-    const imageUrl = img.src; // URL slike
-
-    // Ako šaljemo na server, ovo bi bila funkcija za emitovanje, ali trenutno ne šaljemo podatke
-    syncImage(imageUrl, position, dimensions);
-}
-
-// Funkcija za ažuriranje slike na stranici
-function updateImageOnPage(imageUrl, position, dimensions) {
-    const syncedImage = document.querySelector(`img[src="${imageUrl}"]`); // Selektujemo sliku po URL-u
-    if (syncedImage) {
-        syncedImage.style.left = position.x + 'px';
-        syncedImage.style.top = position.y + 'px';
-        syncedImage.style.width = dimensions.width + 'px';
-        syncedImage.style.height = dimensions.height + 'px';
-    }
-}
-
-// Sinhronizacija slike bez servera (samo u DOM-u)
-function syncImage(imageUrl, position, dimensions) {
-    updateImageOnPage(imageUrl, position, dimensions); // Pozivamo funkciju za ažuriranje slike
-}
-
-// SLIKE ZA POZADINU
-document.getElementById("pozadina").addEventListener("click", function() {
-    var url = prompt("Unesite URL slike:");
-    if (url) {
-        document.body.style.backgroundImage = "url('" + url + "')";
-    } else {
-        document.body.style.backgroundImage = "url('default_image_url.jpg')";
-    }
-});
-
-
-
-            </script> <!-- Zatvaranje JavaScript dela -->
+    </script>
 
 </body> <!-- Zatvaranje BODY taga -->
 
 </html> <!-- Zatvaranje HTML taga -->
+
